<resources>
    <string name="app_name">Lupeon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter">Entrar</string>
    <string name="phone">telefone</string>
    <string name="contacts"><![CDATA[ATENDIMENTO<br>(11) 3197-8140<br>Seg. à sex. das 8 às 17h.<br>contato@lupeon.com.br]]></string>
    <string name="version">2021.1.1</string>
    <string name="back">Voltar</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="loss_password">esqueci minha senha</string>
    <string name="loss_my_password"><![CDATA[Esqueci<br>minha senha]]></string>
    <string name="your_email">Digite seu email</string>
    <string name="my_code">Já possuo o código</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="text_loss_password"><![CDATA[Para criar sua nova senha,<br> enviaremos um novo<br> código token para seu email.]]></string>
    <string name="logout">Logout</string>
    <string name="indicators">Indicadores</string>
    <string name="menu">Menu</string>
    <string name="simulation">Simulaçao</string>
    <string name="tracking">Tracking</string>
    <string name="hello">Olá</string>
    <string name="avanced_search">Pesquisa avançada</string>
    <string name="search">Pesquisa</string>
    <string name="token_code">Digite o token</string>
    <string name="label_password">Digite a senha</string>
    <string name="label_confirm_password">Confirme a senha</string>
    <string name="confirm">Confirmar</string>
    <string name="new_password"><![CDATA[Criar nova<br>senha]]></string>
    <string name="filters">Filtros</string>
    <string name="transporter">Transportadora</string>
    <string name="period">Período</string>
    <string name="clean">Limpar</string>
    <string name="apply">Aplicar</string>
    <string name="digite_number_invoice">Digite o número da nota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Invoice">Nota</string>
    <string name="Recipient">Beneficiario</string>
    <string name="IssuanceDate">Data Emissao</string>
    <string name="InvoiceAmount">Valor Fatura</string>
    <string name="ErrorValue">Valor Erro</string>
    <string name="occurrences">Ocorrencias</string>
    <string name="receipt">Comprovante</string>
    <string name="ExpirationDate">Data Vencimento</string>
    <string name="DeliveryForecast">Previsão de Entrega</string>
    <string name="DiscountValue">Valor Desconto</string>
    <string name="selected_filial">Selecione uma filial</string>
    <string name="origem">Origem</string>
    <string name="Destiny">Destino</string>
    <string name="Deadline">Prazo de Entrega</string>
    <string name="Occurence">Ocorrências</string>
    <string name="new_occurrence_content">Você precisa fazer\n a leitura do código de\n barra da sua nota ou CTE.</string>
    <string name="identification">Identificação</string>
    <string name="to_close">fechar</string>
    <string name="read_invoice">LER NOTA</string>
    <string name="read_cte">LER CTE</string>
    <string name="identification_voice">Identificamos sua nota.</string>
    <string name="content_identification_invoice">O que aconteceu com\n essa entrega?</string>
    <string name="delivered">ENTREGUEI</string>
    <string name="other_occurrences">OUTRAS\n OCORRECIAS</string>
    <string name="content_delivered">"Para confirmar sua\n entrega, precisamos de\n uma foto do\n comprovante."</string>
    <string name="take_photo">TIRAR FOTO</string>
    <string name="okay">OK</string>
    <string name="content_type">Qual tipo de ocorrência?</string>
    <string name="InvoiceInTransit">Notas em Trânsito</string>
</resources>