<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelLogin"
            type="br.com.henriktech.lupeon.ui.login.main.LoginMainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lupeon_primary"
        tools:context=".ui.login.main.LoginMainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageLoginBackgroundView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="174dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/half_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/leftArrowView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/textLoginView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textLoginView" />

            <TextView
                android:id="@+id/textLoginView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutMainLoginView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/back_rectangle"
                app:layout_constraintBottom_toTopOf="@+id/mainEnterButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLoginView">

                <TextView
                    android:id="@+id/labelUserTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/user"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/textUserLoginView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/textUserLoginView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="2dp"
                    android:autofillHints="no"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/labelPasswordTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelUserTextView"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />


                <TextView
                    android:id="@+id/labelPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/textPasswordLoginView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textUserLoginView" />


                <EditText
                    android:id="@+id/textPasswordLoginView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="9dp"
                    android:autofillHints="no"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/buttonLossPasswordView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelPasswordTextView"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />


                <TextView
                    android:id="@+id/buttonLossPasswordView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/loss_password"
                    android:textColor="@color/lupeon_secondary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPasswordLoginView" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/mainEnterButton"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/lupeon_secondary"
                android:text="@string/enter"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/loginMessageErroView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModelLogin.errorMessage}"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/mainEnterButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutMainLoginView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loading_background"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



