<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.henriktech.lupeon.ui.login.presentention.LoginPresentationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lupeon_primary"
        tools:context=".ui.LupeonActivity">

        <ImageView
            android:id="@+id/halfLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="278dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/half_logo" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/presentationEnterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/presentationEnterButton"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="40dp"
            android:text="@string/enter"
            android:backgroundTint="@color/lupeon_secondary"
            android:textColor="@color/white"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@+id/contactsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage" />

        <ImageView
            android:id="@+id/phoneImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/phone"
            app:layout_constraintBottom_toBottomOf="@+id/contactsText"
            app:layout_constraintEnd_toStartOf="@+id/contactsText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/contactsText"
            app:srcCompat="@drawable/ic_phone" />

        <TextView
            android:id="@+id/contactsText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="20dp"
            android:text="@{viewModel.contacts}"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/versionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phoneImage"
            app:layout_constraintTop_toBottomOf="@+id/presentationEnterButton" />


        <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@{viewModel.version}"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactsText"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>